# blog

./: .Makefile.swp  .firebaserc  .gitignore  .page_manifest.json.swp  Cargo.toml  LEARNED.md  Makefile  README.md  db.sqlite  firebase.json  page_manifest.json
.firebase/: hosting.Z2VuZXJhdGVk.cache
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
layouts/: all_posts.layout.html  blog.layout.html  blurb.layout.html  footer.layout.html  header.layout.html  index.layout.html  post.layout.html
posts/: 2021_09_16_httptest.md  2021_10_02_embracing_cloud_native.md  2021_12_01_go_118_generics.md  2022_08_17_generic_api_design.md  2022_12_31_garden_of_go.md  2023_03_08_code_block.md  2023_07_12_everything_go_errors.md  initial.md
replaceable/: header.layout.html
reusable/: footer.html  header.html
src/: .main.rs.swp  .templating.rs.swp  main.rs  pages.rs  repo.rs  templating.rs
src/pages/: layout.rs
static/: .landing.html.swp  landing.html
static/css/: main.css
static/reusable/: footer.html  header.html
