[package]
name = "blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.18"
regex = "1"
lazy_static = "1.4.0"
rusqlite = { version = "0.27.0", features = ["bundled"] }
pulldown-cmark = { version = "0.9.1", default-features = false }
