[package]
name = "blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
pulldown-cmark = { version = "0.9.2", default-features = false }
maplit = "1.0.2"
fs_extra = "1.2.0"
anyhow = "1.0.68"
lazy_static = "1.4.0"
syntect = "5.0.0"
chrono = "0.4.24"
clap = "4.3.12"
tokio = { version = "1.29.1", features = ["full"] }
tracing-subscriber = "0.3.17"
axum = "0.6.18"
tower-http = { version = "0.4.1", features = ["fs"] }
tracing = "0.1.37"
notify = { version = "6.0.1", default-features = false }
notify-debouncer-mini = { version = "*", default-features = false }
